--- a/package.json
+++ b/package.json
@@ -55,6 +55,11 @@
     "webpack-validator": "^2.1.1"
   },
   "dependencies": {
+    "alt": "^0.18.6",
+    "alt-container": "^1.1.1",
+    "alt-utils": "^1.0.0",
+    "classnames": "^2.2.6",
+    "pdftohtmljs": "^0.5.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0"
   }
